fix(forms): show scrollbar inside drawer form in IE11

--- a/packages/forms/src/UIForm/UIForm.scss
+++ b/packages/forms/src/UIForm/UIForm.scss
@@ -11,11 +11,12 @@
 
 :global(.tc-drawer-container),
 :global(.modal-body) {
-	> .uiform {
+	.uiform {
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
 		min-height: 0;
+		overflow: hidden;
 	}
 
 	.form-content {
